add new website from server na

--- a/xem-phim-moi/encanto-vung-dat-than-ky/index.html
+++ b/xem-phim-moi/encanto-vung-dat-than-ky/index.html
@@ -1196,7 +1196,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             4
+             6
             </dd>
             <br/>
            </dl>
@@ -1676,18 +1676,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/chi-vi-vai-dong-do-la" title="Chỉ Vì Vài Đồng Đô La">
+          <a class="list-top-movie-link" href="/phim-moi/ma-ca-rong-trong-gia-dinh-ta" title="Ma cà rồng trong gia đình ta">
            <span class="status">
-            HD Vietsub
+            Vietsub - HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chi-vi-vai-dong-do-la-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ma-ca-rong-trong-gia-dinh-ta-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Chỉ Vì Vài Đồng Đô La
+             Ma cà rồng trong gia đình ta
             </span>
             <span class="list-top-movie-item-en">
-             For a Few Dollars More
+             A Vampire in the Family
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1698,21 +1698,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bup-be-ma-sabrina" title="Búp bê ma Sabrina">
+          <a class="list-top-movie-link" href="/phim-moi/au-trung-tinh-nghich-o-sao-hoa" title="Ấu Trùng Tinh Nghịch Ở Sao Hỏa">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bup-be-ma-sabrina-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/au-trung-tinh-nghich-o-sao-hoa-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Búp bê ma Sabrina
+             Ấu Trùng Tinh Nghịch Ở Sao Hỏa
             </span>
             <span class="list-top-movie-item-en">
-             Sabrina
+             Larva in Mars
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1720,18 +1720,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/thap-nhi-dam" title="Thập Nhị Đàm">
+          <a class="list-top-movie-link" href="/phim-moi/5-anh-em-sieu-nhan" title="5 Anh Em Siêu Nhân">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thap-nhi-dam-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/5-anh-em-sieu-nhan-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Thập Nhị Đàm
+             5 Anh Em Siêu Nhân
             </span>
             <span class="list-top-movie-item-en">
-             Twelve Legends
+             Power Rangers
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/su-menh-cua-apollo" title="Sứ Mệnh Của Apollo">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/su-menh-cua-apollo-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Sứ Mệnh Của Apollo
+            </span>
+            <span class="list-top-movie-item-en">
+             Mission Control: The Unsung Heroes Of Apollo
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1742,40 +1764,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nhoc-trum-di-lam-lai-phan-3" title="Nhóc trùm: Đi làm lại (Phần 3)">
+          <a class="list-top-movie-link" href="/phim-moi/nang-nhan-lon-roi" title="Năng Nhẫn Lớn Rồi">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhoc-trum-di-lam-lai-phan-3-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nang-nhan-lon-roi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Nhóc trùm: Đi làm lại (Phần 3)
+             Năng Nhẫn Lớn Rồi
             </span>
             <span class="list-top-movie-item-en">
-             The Boss Baby: Back in Business (Season 3)
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/goi-cho-toi-roger-stone" title="Gọi cho tôi Roger Stone">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/goi-cho-toi-roger-stone-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Gọi cho tôi Roger Stone
-            </span>
-            <span class="list-top-movie-item-en">
-             Get Me Roger Stone
+             Năng Nhẫn Lớn Rồi
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
