add new website from server na

--- a/xem-phim-moi/encanto-vung-dat-than-ky/index.html
+++ b/xem-phim-moi/encanto-vung-dat-than-ky/index.html
@@ -1196,7 +1196,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             6
+             7
             </dd>
             <br/>
            </dl>
@@ -1676,18 +1676,62 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ma-ca-rong-trong-gia-dinh-ta" title="Ma cà rồng trong gia đình ta">
+          <a class="list-top-movie-link" href="/phim-moi/ngai-khong-nga-re" title="Ngài Không Ngã Rẽ">
            <span class="status">
-            Vietsub - HD Vietsub
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ma-ca-rong-trong-gia-dinh-ta-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ngai-khong-nga-re-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Ma cà rồng trong gia đình ta
+             Ngài Không Ngã Rẽ
             </span>
             <span class="list-top-movie-item-en">
-             A Vampire in the Family
+             Mr. Nobody
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/su-gia-than-chet" title="Sứ Giả Thần Chết">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/su-gia-than-chet-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Sứ Giả Thần Chết
+            </span>
+            <span class="list-top-movie-item-en">
+             Bleach
+            </span>
+            <span class="list-top-movie-item-view">
+             0 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/ban-thich-thu-tu-cua-minh-nhu-the-nao-phan-13" title="Bạn thích thư Tư của mình như thế nào? (Phần 13)">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ban-thich-thu-tu-cua-minh-nhu-the-nao-phan-13-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Bạn thích thư Tư của mình như thế nào? (Phần 13)
+            </span>
+            <span class="list-top-movie-item-en">
+             How do you like Wednesday? (Season 13)
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1698,62 +1742,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/au-trung-tinh-nghich-o-sao-hoa" title="Ấu Trùng Tinh Nghịch Ở Sao Hỏa">
+          <a class="list-top-movie-link" href="/phim-moi/rupauls-drag-race-cuoc-chien-giay-cao-got-hau-truong-phan-12" title="RuPaul’s Drag Race – Cuộc chiến giày cao gót: Hậu trường (Phần 12)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/au-trung-tinh-nghich-o-sao-hoa-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/rupauls-drag-race-cuoc-chien-giay-cao-got-hau-truong-phan-12-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Ấu Trùng Tinh Nghịch Ở Sao Hỏa
+             RuPaul’s Drag Race – Cuộc chiến giày cao gót: Hậu trường (Phần 12)
             </span>
             <span class="list-top-movie-item-en">
-             Larva in Mars
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/5-anh-em-sieu-nhan" title="5 Anh Em Siêu Nhân">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/5-anh-em-sieu-nhan-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             5 Anh Em Siêu Nhân
-            </span>
-            <span class="list-top-movie-item-en">
-             Power Rangers
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/su-menh-cua-apollo" title="Sứ Mệnh Của Apollo">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/su-menh-cua-apollo-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Sứ Mệnh Của Apollo
-            </span>
-            <span class="list-top-movie-item-en">
-             Mission Control: The Unsung Heroes Of Apollo
+             RuPaul’s Drag Race: Untucked! (Season 12)
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1764,21 +1764,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nang-nhan-lon-roi" title="Năng Nhẫn Lớn Rồi">
+          <a class="list-top-movie-link" href="/phim-moi/rodney-king" title="Rodney King">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nang-nhan-lon-roi-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/rodney-king-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Năng Nhẫn Lớn Rồi
+             Rodney King
             </span>
             <span class="list-top-movie-item-en">
-             Năng Nhẫn Lớn Rồi
+             Rodney King
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
