add new website from server na

--- a/xem-phim-moi/ac-linh-trong-xac-me/index.html
+++ b/xem-phim-moi/ac-linh-trong-xac-me/index.html
@@ -1191,7 +1191,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             4
+             5
             </dd>
             <br/>
            </dl>
@@ -1781,18 +1781,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ong-ngoai-tuoi-30-2" title="Ông Ngoại Tuổi 30">
+          <a class="list-top-movie-link" href="/phim-moi/gin-gwai-2" title="Gin gwai 2">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ong-ngoai-tuoi-30-2009-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/gin-gwai-2-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Ông Ngoại Tuổi 30
+             Gin gwai 2
             </span>
             <span class="list-top-movie-item-en">
-             Speed Scandal
+             The Eye 2
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1803,18 +1803,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/xau-xi" title="Xấu xí">
+          <a class="list-top-movie-link" href="/phim-moi/ba-chi-em-dung-cam" title="Ba Chị Em Dũng Cảm">
            <span class="status">
-            Vietsub - HD Vietsub
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/xau-xi-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ba-chi-em-dung-cam-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Xấu xí
+             Ba Chị Em Dũng Cảm
             </span>
             <span class="list-top-movie-item-en">
-             Uglies
+             Three Siblings Bravely
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1825,18 +1825,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/dung-lai-va-bat-lua-phan-3" title="Dừng Lại Và Bắt Lửa (Phần 3)">
+          <a class="list-top-movie-link" href="/phim-moi/47-lang-nhan" title="47 Lãng Nhân">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dung-lai-va-bat-lua-2-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/47-lang-nhan-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Dừng Lại Và Bắt Lửa (Phần 3)
+             47 Lãng Nhân
             </span>
             <span class="list-top-movie-item-en">
-             Halt And Catch Fire (Season 3)
+             47 Ronin
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1847,21 +1847,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/pony-be-nho-tao-dau-an-rieng-phan-2" title="Pony bé nhỏ: Tạo dấu ấn riêng (Phần 2)">
+          <a class="list-top-movie-link" href="/phim-moi/van-mai-tuoi-17" title="Vẫn Mãi Tuổi 17">
            <span class="status">
-            HD Vietsub
+            HD Thuyết Minh
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/pony-be-nho-tao-dau-an-rieng-phan-2-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/van-mai-tuoi-17-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Pony bé nhỏ: Tạo dấu ấn riêng (Phần 2)
+             Vẫn Mãi Tuổi 17
             </span>
             <span class="list-top-movie-item-en">
-             My Little Pony: Make Your Mark (Season 2)
+             Still 17
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1869,21 +1869,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/man-suong-chet" title="Màn Sương Chết">
+          <a class="list-top-movie-link" href="/phim-moi/trai-tim-rong-su-khoi-dau-moi" title="Trái tim rồng: Sự khởi đầu mới">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/man-suong-chet-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/trai-tim-rong-su-khoi-dau-moi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Màn Sương Chết
+             Trái tim rồng: Sự khởi đầu mới
             </span>
             <span class="list-top-movie-item-en">
-             Just a Breath Away
+             Dragonheart: A New Beginning
             </span>
             <span class="list-top-movie-item-view">
-             4 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
