add new website from server na

--- a/xem-phim-moi/ac-linh-trong-xac-me/index.html
+++ b/xem-phim-moi/ac-linh-trong-xac-me/index.html
@@ -1191,7 +1191,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             5
+             6
             </dd>
             <br/>
            </dl>
@@ -1781,21 +1781,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/gin-gwai-2" title="Gin gwai 2">
+          <a class="list-top-movie-link" href="/phim-moi/one-punch-man" title="One-Punch Man">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/gin-gwai-2-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/one-punch-man-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Gin gwai 2
+             One-Punch Man
             </span>
             <span class="list-top-movie-item-en">
-             The Eye 2
+             ワンパンマン
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1803,40 +1803,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ba-chi-em-dung-cam" title="Ba Chị Em Dũng Cảm">
+          <a class="list-top-movie-link" href="/phim-moi/alapaap" title="Alapaap">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ba-chi-em-dung-cam-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/alapaap-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Ba Chị Em Dũng Cảm
+             Alapaap
             </span>
             <span class="list-top-movie-item-en">
-             Three Siblings Bravely
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/47-lang-nhan" title="47 Lãng Nhân">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/47-lang-nhan-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             47 Lãng Nhân
-            </span>
-            <span class="list-top-movie-item-en">
-             47 Ronin
+             Alapaap
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1847,21 +1825,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/van-mai-tuoi-17" title="Vẫn Mãi Tuổi 17">
+          <a class="list-top-movie-link" href="/phim-moi/huong-vi-thuong-yeu" title="Hương Vị Thương Yêu">
            <span class="status">
-            HD Thuyết Minh
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/van-mai-tuoi-17-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/huong-vi-thuong-yeu-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Vẫn Mãi Tuổi 17
+             Hương Vị Thương Yêu
             </span>
             <span class="list-top-movie-item-en">
-             Still 17
+             Kiss Love and Taste
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1869,18 +1847,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/trai-tim-rong-su-khoi-dau-moi" title="Trái tim rồng: Sự khởi đầu mới">
+          <a class="list-top-movie-link" href="/phim-moi/chao-nguoi-ngoai-hanh-tinh" title="Chào người ngoài hành tinh">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/trai-tim-rong-su-khoi-dau-moi-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chao-nguoi-ngoai-hanh-tinh-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Trái tim rồng: Sự khởi đầu mới
+             Chào người ngoài hành tinh
             </span>
             <span class="list-top-movie-item-en">
-             Dragonheart: A New Beginning
+             HELLO-ALIENS
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/cuoc-doi-pepe-mujica" title="Cuộc đời Pepe Mujica">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cuoc-doi-pepe-mujica-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Cuộc đời Pepe Mujica
+            </span>
+            <span class="list-top-movie-item-en">
+             El Pepe, a Supreme Life
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
