add new website from server na

--- a/xem-phim-bo/tinh-vo-than-quyet/index.html
+++ b/xem-phim-bo/tinh-vo-than-quyet/index.html
@@ -1189,7 +1189,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             2
+             3
             </dd>
             <br/>
            </dl>
@@ -1659,18 +1659,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/su-lua-chon-cua-vo" title="Sự Lựa Chọn Của Vợ">
+          <a class="list-top-movie-link" href="/phim-moi/khu-rung-mat-tich" title="Khu rừng mất tích">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/su-lua-chon-cua-vo-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/khu-rung-mat-tich-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Sự Lựa Chọn Của Vợ
+             Khu rừng mất tích
             </span>
             <span class="list-top-movie-item-en">
-             Infidelity in Marriage
+             The Forest
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/tay-bac-phong-van" title="Tây Bắc Phong Vân">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tay-bac-phong-van-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Tây Bắc Phong Vân
+            </span>
+            <span class="list-top-movie-item-en">
+             Justice in Northwest
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1681,18 +1703,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/phan-xet" title="Phán Xét">
+          <a class="list-top-movie-link" href="/phim-moi/ma-thoi-den-tinh-tuyet-co-thanh-dien-anh" title="Ma Thổi Đèn: Tinh Tuyệt Cổ Thành (Điện Ảnh)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/phan-xet-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ma-thoi-den-tinh-tuyet-co-thanh-dien-anh-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Phán Xét
+             Ma Thổi Đèn: Tinh Tuyệt Cổ Thành (Điện Ảnh)
             </span>
             <span class="list-top-movie-item-en">
-             The Judgement
+             Candle in the Tomb
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1703,18 +1725,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/niem-song" title="Niềm Sống">
+          <a class="list-top-movie-link" href="/phim-moi/xuan-thu-phong-than" title="Xuân Thu Phong Thần">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/niem-song-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/xuan-thu-phong-than-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Niềm Sống
+             Xuân Thu Phong Thần
             </span>
             <span class="list-top-movie-item-en">
-             The Bucket List
+             Chun Qiu Fengshen
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1725,43 +1747,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/co-thanh-trong-guong" title="Cô Thành Trong Gương">
+          <a class="list-top-movie-link" href="/phim-moi/chu-voi-di-lac" title="Chú Voi Đi Lạc">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/co-thanh-trong-guong-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chu-voi-di-lac-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cô Thành Trong Gương
+             Chú Voi Đi Lạc
             </span>
             <span class="list-top-movie-item-en">
-             Lonely Castle in the Mirror
+             Zoo
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/kimmy-bat-bai-phan-1" title="Kimmy bất bại (Phần 1)">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/kimmy-bat-bai-phan-1-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Kimmy bất bại (Phần 1)
-            </span>
-            <span class="list-top-movie-item-en">
-             Unbreakable Kimmy Schmidt (Season 1)
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
